--- a/src/DuendeLoginService/appsettings.json
+++ b/src/DuendeLoginService/appsettings.json
@@ -1,5 +1,5 @@
-﻿{
+{
   "ConnectionStrings": {
-    "DefaultConnection": "Data Source=AspIdUsers.db;"
+    "DefaultConnection": "Data Source=AspIdUsersV6_1.db;"
   }
 }
