--- a/NuGet.Config
+++ b/NuGet.Config
@@ -52,5 +52,8 @@
     <packageSource key="nuget.org">
       <package pattern="*" />
     </packageSource>
+    <packageSource key="Project Packages">
+      <package pattern="Services.Shared" />
+    </packageSource>
   </packageSourceMapping>
 </configuration>
