Start adding docker compose support

--- a/src/LoggingService/LoggingService.csproj
+++ b/src/LoggingService/LoggingService.csproj
@@ -5,6 +5,7 @@
     <UserSecretsId>362890ea-a7f9-4579-ac86-936d383a8c26</UserSecretsId>
     <DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
     <DockerfileContext>..\..</DockerfileContext>
+    <DockerComposeProjectPath>..\..\docker-compose.dcproj</DockerComposeProjectPath>
   </PropertyGroup>
 
   <ItemGroup>
